[metadata]
name = safe_imagefield
version = 1.0
data_files=[("imagefiles": ["tests/extras/*.png", "tests/extras/*.jpg"],)],
description = A Django app that subclasses django's image field, adding methods to validate the image
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/millerthegorilla/safe_imagefield
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MiT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate
    ffmpeg == 1.4
    Pillow == 8.2.0
    clamd == 1.0.2
    python-magic == 0.4.25
    pytest == 7.0.1